--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 :root {
-  --text-dark: #000;
-  --text-light: #fff;
-  --text-grey: #adbdcc;
+  /* Fonts and Headings */
   --body-font: "Roboto", sans-serif;
   --heading-font: "Anek Telugu", sans-serif;
   --h1-size: 94px;
@@ -12,14 +10,30 @@
   --h4-size: 32px;
   --h5-size: 28px;
   --h6-size: 22px;
-
+  /* Colors */
+  --text-dark: #000;
+  --text-light: #fff;
+  --text-grey: #adbdcc;
   --purple-1: #6962f7;
   --purple-2: #7000ff;
+  --blue-1: #00d4ff;
   --primary-accent: #0a2540;
+  --bg-white: #fff;
+  --bg-light: #f7f9fc;
+  /* Spacing */
+  --spacing-sm: 8px;
+  --spacing-md: 16px;
+  --spacing-lg: 32px;
+  --spacing-xl: 64px;
 }
 
 body {
   font-family: var(--body-font);
+  color: var(--text-dark);
+  width: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  padding: var(--spacing-sm) 0 0 0;
 }
 
 h1 {
