Defined button styles - primary and secondary buttons

--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
   --primary-accent: #0a2540;
   --bg-white: #fff;
   --bg-light: #f7f9fc;
+  --primary-button-hover: #6d7a88;
+  /* Buttons */
+  --button-size: 16px;
   /* Spacing */
   --spacing-sm: 8px;
   --spacing-md: 16px;
@@ -131,4 +134,39 @@ p {
   line-height: var(--secondary-text-height);
   color: var(--text-grey);
   letter-spacing: 0.25px;
+}
+
+.primary-button {
+  font: var(--body-font);
+  font-size: var(--button-size);
+  letter-spacing: 1.25px;
+  font-weight: bold;
+  border: none;
+  border-radius: 20px;
+  background-color: var(--primary-accent);
+  color: var(--text-light);
+  padding: var(--spacing-sm) var(--spacing-md);
+  transition: all 0.15s ease;
+}
+
+.primary-button:hover {
+  background-color: var(--primary-button-hover);
+  cursor: pointer;
+}
+
+.secondary-button {
+  font: var(--body-font);
+  font-size: var(--button-size);
+  letter-spacing: 1.25px;
+  font-weight: bold;
+  border: none;
+  border-radius: 20px;
+  background-color: transparent;
+  color: var(--primary-accent);
+  transition: all 0.15s ease;
+}
+
+.secondary-button:hover {
+  opacity: 0.75;
+  cursor: pointer;
 }
