--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   background-color: grey;
 }
 
@@ -195,6 +200,7 @@ p {
   align-items: center;
   width: 100%;
   max-width: var(--standard-width);
+  padding: 0 var(--spacing-md);
 }
 
 .menu {
@@ -207,4 +213,17 @@ p {
 .menu a {
   color: var(--text-light);
   margin: 0 var(--spacing-md);
+  font-weight: bold;
+}
+
+.menu a:hover {
+  text-decoration: underline;
+}
+
+.navbar-button {
+  background-color: rgba(250, 250, 250, 0.25);
+}
+
+.navbar-button:hover {
+  background-color: rgba(250, 250, 250, 0.5);
 }
