--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 :root {
-  /* Fonts, Headings, Subtitles, Paragraphs */
   --body-font: "Roboto", sans-serif;
   --heading-font: "Anek Telugu", sans-serif;
   --h1-size: 94px;
@@ -36,6 +35,8 @@
   --spacing-xl: 64px;
   --standard-width: 1144px;
 }
+
+/* GENERAL STYLES */
 
 body {
   font-family: var(--body-font);
@@ -124,6 +125,47 @@ p {
   margin: var(--spacing-md) 0;
 }
 
+/* LAYOUT STYLES */
+
+.section-container {
+  width: 100%;
+  max-width: var(--standard-width);
+}
+
+.two-column {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+
+/* With child combinator (>) elements matched by the second selector must be the immediate children of the elements matched by the first selector. */
+.two-column > .col-left {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 var(--spacing-md) 0 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.two-column > .col-right {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 0 0 var(--spacing-md);
+
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+/* REUSABLE CLASSES */
+
 .subtitle,
 .subtitle2 {
   color: var(--purple-1);
@@ -194,6 +236,7 @@ p {
 }
 
 /* NAVBAR */
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -227,3 +270,5 @@ p {
 .navbar-button:hover {
   background-color: rgba(250, 250, 250, 0.5);
 }
+
+/*  */
