--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   justify-content: center;
   align-items: center;
 
-  background-color: grey;
+  background-color: rgb(214, 214, 214);
 }
 
 h1 {
@@ -272,3 +272,31 @@ p {
 }
 
 /* HERO */
+
+main {
+  margin: var(--spacing-xl) 0;
+}
+
+.button-container {
+  display: flex;
+  margin: var(--spacing-md) 0;
+}
+
+.button-container button:nth-of-type(2) {
+  margin: 0 0 0 var(--spacing-md);
+  color: var(--purple-2);
+}
+
+.hero p {
+  max-width: 480px;
+}
+
+.hero .hero-phone-container {
+  height: 564px;
+  align-items: flex-end;
+}
+
+.hero-phone {
+  height: 628px;
+  transform: translate(32px, -32px);
+}
