Created graphic grid section and styled it

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@
   --primary-button-hover: #6d7a88;
   /* Buttons */
   --button-size: 16px;
+  /* Swadows */
+  --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
   /* Spacing */
   --spacing-sm: 8px;
   --spacing-md: 16px;
@@ -333,4 +335,39 @@ main {
 
 .unified-platform-section .primary-button:hover {
   background-color: var(--primary-accent);
+}
+
+/* GRAPHIC GRID SECTION */
+.graphic-grid {
+  display: grid;
+  grid-template-areas:
+    "card slack slack"
+    "phone slack slack"
+    "phone dash dash";
+  grid-gap: var(--spacing-lg);
+  padding: var(--spacing-lg) 0;
+}
+
+#credit-card {
+  grid-area: card;
+}
+
+#slack-invoice {
+  grid-area: slack;
+}
+
+#phone {
+  grid-area: phone;
+}
+
+#dash {
+  grid-area: dash;
+}
+
+#credit-card,
+#slack-invoice,
+#phone,
+#dash {
+  width: 100%;
+  box-shadow: var(--standard-box-shadow);
 }
