--- a/style.css
+++ b/style.css
@@ -360,14 +360,12 @@ main {
 
 /* GRAPHIC GRID SECTION */
 
-.graphic-grid {
-  display: grid;
-  grid-template-areas:
-    "card slack slack"
-    "phone slack slack"
-    "phone dash dash";
-  grid-gap: var(--spacing-lg);
-  padding: var(--spacing-lg) 0;
+#credit-card,
+#slack-invoice,
+#phone,
+#dash {
+  width: 100%;
+  box-shadow: var(--standard-box-shadow);
 }
 
 #credit-card {
@@ -386,10 +384,52 @@ main {
   grid-area: dash;
 }
 
-#credit-card,
-#slack-invoice,
-#phone,
-#dash {
-  width: 100%;
-  box-shadow: var(--standard-box-shadow);
+.graphic-grid {
+  display: grid;
+  grid-template-areas:
+    "card slack slack"
+    "phone slack slack"
+    "phone dash dash";
+  grid-gap: var(--spacing-lg);
+  padding: var(--spacing-lg) 0;
+}
+
+/* INTEGRATIONS SECTION */
+
+.integrations-section {
+  color: var(--text-light);
+  background-color: var(--primary-accent);
+}
+
+.card-container {
+  display: flex;
+  margin: var(--spacing-lg) 0;
+}
+
+.integrations-section .card-container .card {
+  width: 50%;
+}
+
+.integrations-section .primary-button {
+  background-color: var(--blue-1);
+  color: var(--primary-accent);
+  margin: var(--spacing-md) 0 0 0;
+}
+
+.integrations-section .primary-button:hover {
+  background-color: var(--bg-white);
+}
+
+.integrations-section .secondary-button {
+  color: var(--blue-1);
+}
+
+#api-code,
+#terminal-code {
+  max-width: 470px;
+  border-radius: 20px;
+}
+
+#api-code {
+  margin: 0 0 var(--spacing-md) 0;
 }
