--- a/style.css
+++ b/style.css
@@ -401,7 +401,7 @@ main {
   background-color: var(--primary-accent);
 }
 
-.card-container {
+.integrations-section .card-container {
   display: flex;
   margin: var(--spacing-lg) 0;
 }
@@ -432,4 +432,22 @@ main {
 
 #api-code {
   margin: 0 0 var(--spacing-md) 0;
+}
+
+/* WHY SWIPE SECTION */
+
+.why-swipe-section .card-container {
+  display: flex;
+  margin: var(--spacing-lg) 0;
+}
+
+.why-swipe-section .card-container .card {
+  width: 25%;
+  padding: 0 var(--spacing-sm) 0 0;
+  margin: 0 var(--spacing-md) 0 0;
+  box-sizing: border-box;
+}
+
+.why-swipe-section .secondary-text {
+  color: var(--text-dark);
 }
