--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ body {
   background-color: rgb(214, 214, 214);
 }
 
+main {
+  width: 100%;
+  margin: var(--spacing-xl) 0;
+}
+
 h1 {
   font-family: var(--heading-font);
   font-weight: 600;
@@ -294,8 +299,10 @@ p {
 
 /* HERO*/
 
-main {
-  margin: var(--spacing-xl) 0;
+.hero {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .button-container {
@@ -324,6 +331,12 @@ main {
 
 /* PARTNERS SECTION */
 
+.partners-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .partners-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -341,6 +354,10 @@ main {
 /* UNIFIED PLATFORM SECTION */
 
 .unified-platform-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
   padding: var(--spacing-xl) 0;
 }
 
@@ -359,6 +376,12 @@ main {
 }
 
 /* GRAPHIC GRID SECTION */
+
+.graphic-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 
 #credit-card,
 #slack-invoice,
@@ -397,6 +420,10 @@ main {
 /* INTEGRATIONS SECTION */
 
 .integrations-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
   color: var(--text-light);
   background-color: var(--primary-accent);
 }
@@ -436,6 +463,12 @@ main {
 
 /* WHY SWIPE SECTION */
 
+.why-swipe-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .why-swipe-section .card-container {
   display: flex;
   margin: var(--spacing-lg) 0;
@@ -450,4 +483,13 @@ main {
 
 .why-swipe-section .secondary-text {
   color: var(--text-dark);
+}
+
+/* GLOBAL SCALE SECTION */
+
+.global-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--primary-accent);
 }
