--- a/style.css
+++ b/style.css
@@ -28,8 +28,15 @@
   --primary-button-hover: #6d7a88;
   /* Buttons */
   --button-size: 16px;
-  /* Swadows */
+  /* Swadows and Gradients */
   --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
+  --primary-gradient: linear-gradient(
+    101.33deg,
+    #08209a 0.76%,
+    #6563ff 33.33%,
+    #36c5f0 76.92%,
+    #83e2ff 96.96%
+  );
   /* Spacing */
   --spacing-sm: 8px;
   --spacing-md: 16px;
@@ -556,6 +563,7 @@ p {
   height: 446px;
   box-shadow: var(--standard-box-shadow);
   border-radius: 20px;
+  overflow: hidden;
 }
 
 .swipe-sessions-card .card-top {
@@ -564,4 +572,15 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.swipe-sessions-card .card-top::before {
+  content: "";
+  width: 100%;
+  height: 150%;
+  background-color: var(--purple-1);
+  position: absolute;
+  top: -40%;
+  transform: skewY(-5deg);
 }
