--- a/style.css
+++ b/style.css
@@ -639,3 +639,11 @@ p {
   justify-content: center;
   padding: calc(var(--spacing-xl) * 2) 0;
 }
+
+.getting-started-section .col-right {
+  flex-direction: row;
+}
+
+.getting-started-section .col-right .card {
+  width: 50%;
+}
