--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 
 main {
   width: 100%;
-  margin: var(--spacing-xl) 0;
+  margin: var(--spacing-xl) 0 0 0;
 }
 
 h1 {
@@ -670,3 +670,62 @@ p {
 }
 
 /* FOOTER SECTION */
+footer {
+  width: 100%;
+  margin: var(--spacing-xl) 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  background-color: var(--bg-light);
+  padding: var(--spacing-xl) 0;
+}
+
+.footer .section-container {
+  display: flex;
+}
+
+.footer .col {
+  width: 25%;
+}
+
+.footer .col ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer .col ul li {
+  margin: var(--spacing-md) 0;
+}
+
+.footer .col a {
+  color: var(--text-dark);
+  font-weight: normal;
+}
+
+.footer .col a:hover {
+  color: var(--purple-1);
+  text-decoration: underline;
+}
+
+.footer .icon-link {
+  display: flex;
+  align-items: center;
+  margin: var(--spacing-md) 0;
+}
+
+.footer .icon-link img {
+  width: 24px;
+  margin-right: var(--spacing-sm);
+}
+
+#footer-logo {
+  max-width: 108px;
+  margin: 0 0 var(--spacing-md) 0;
+}
+
+.footer h3 {
+  font-size: var(--h6-size);
+  font-weight: 700;
+}
