--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   justify-content: center;
   align-items: center;
 
-  background-color: var(--bg-light);
+  background-color: var(--bg-white);
 }
 
 main {
@@ -364,7 +364,7 @@ p {
   width: 100%;
   display: flex;
   justify-content: center;
-
+  background-color: var(--bg-light);
   padding: var(--spacing-xl) 0;
 }
 
@@ -388,6 +388,7 @@ p {
   width: 100%;
   display: flex;
   justify-content: center;
+  background-color: var(--bg-white);
 }
 
 #credit-card,
@@ -512,12 +513,23 @@ p {
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: var(--primary-accent);
   /* With inheritance I can change the text in this section white */
   color: var(--text-light);
 
-  padding: calc(var(--spacing-xl) * 3) 0;
+  padding: calc(var(--spacing-xl) * 3) 0 0 0;
   position: relative;
+}
+
+.global-section::before {
+  content: "";
+  width: 100%;
+  height: 1200px;
+  background-color: var(--primary-accent);
+  position: absolute;
+  top: -32px;
+  left: 0;
+  transform: skewY(-10deg);
+  z-index: -1;
 }
 
 .global-section a {
@@ -561,6 +573,17 @@ p {
   display: flex;
   justify-content: center;
   padding: calc(var(--spacing-xl) * 2) 0;
+  position: relative;
+}
+
+.virtual-events-section::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-white);
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 
 .virtual-events-section .primary-button {
