--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ p {
   width: 100%;
   max-width: var(--standard-width);
   padding: 0 var(--spacing-md);
+  margin: 0 0 var(--spacing-xl) 0;
 }
 
 .menu {
@@ -302,6 +303,19 @@ p {
 
 .navbar-button:hover {
   background-color: rgba(250, 250, 250, 0.5);
+}
+
+/* ANIMATED GRADIENT */
+
+#gradient-canvas {
+  background-color: #7000ff;
+  width: 200%;
+  height: 970px;
+  transform: rotate(-10deg);
+  position: absolute;
+  top: -600px;
+  left: -50%;
+  z-index: -10;
 }
 
 /* HERO*/
