--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ p {
 /* FOOTER SECTION */
 footer {
   width: 100%;
-  margin: var(--spacing-xl) 0;
+  margin: var(--spacing-xl) 0 0 0;
 }
 
 .footer {
