Corrected an issue with an angled stripes (integrations section)

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ p {
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: var(--bg-white);
+  background-color: var(--bg-light);
 }
 
 #credit-card,
@@ -465,6 +465,17 @@ p {
   left: 0;
   z-index: -1;
   transform: skewY(-10deg);
+}
+
+.integrations-section::after {
+  content: "";
+  background-color: var(--bg-light);
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
 }
 
 .integrations-section .card-container {
