--- a/queries.css
+++ b/queries.css
@@ -6,6 +6,7 @@
 
 /* TABLET SIZE */
 @media only screen and (max-width: 850px) {
+  /* PARTNERS SECTION */
   .partners-grid img {
     width: 100%;
     height: auto;
@@ -13,19 +14,38 @@
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    background-color: aqua;
+  }
+
   :root {
     --h1-size: 64px;
     --h1-height: 72px;
     --h3-size: 34px;
   }
 
-  body {
-    background-color: aqua;
+  /* UNIFIED PLATFORM SECTION */
+  .unified-platform-section h2 {
+    width: 100%;
   }
 }
 
 /* MOBILE SIZE */
 @media only screen and (max-width: 550px) {
+  .two-column {
+    flex-direction: column;
+  }
+
+  .two-column .col-left {
+    width: 100%;
+  }
+
+  .two-column .col-right {
+    width: 100%;
+    padding: 0;
+  }
+
+  /* PARTNERS SECTION */
   .partners-grid {
     grid-template-columns: 1fr 1fr;
   }
