--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@
 
 body {
   font-family: var(--body-font);
+  background-color: var(--bg-white);
   color: var(--text-dark);
-  width: 100%;
   margin: 0;
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
@@ -59,8 +59,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
 
-  background-color: var(--bg-white);
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 
 main {
