--- a/queries.css
+++ b/queries.css
@@ -23,10 +23,6 @@
 }
 
 @media only screen and (max-width: 768px) {
-  body {
-    background-color: aqua;
-  }
-
   :root {
     --h1-size: 64px;
     --h1-height: 72px;
@@ -49,6 +45,16 @@
 
   #api-code {
     margin: 0 0 var(--spacing-lg) 0;
+  }
+
+  /* WHY SWIPE SECTION*/
+  .why-swipe-section .card-container {
+    flex-wrap: wrap;
+  }
+  .why-swipe-section .card-container .card {
+    width: 50%;
+    margin: var(--spacing-md) 0;
+    padding: 0 var(--spacing-md);
   }
 }
 
@@ -75,5 +81,15 @@
   /* INTEGRATIONS SECTION */
   .integrations-section .col-right {
     display: none;
+  }
+
+  /* WHY SWIPE SECTION */
+  .why-swipe-section .card-container .card {
+    width: 100%;
+    margin: var(--spacing-sm) 0;
+  }
+
+  .why-swipe-section .card-container .card .icon {
+    height: 35px;
   }
 }
