Styled the global scale section in media queries

--- a/queries.css
+++ b/queries.css
@@ -56,6 +56,22 @@
     margin: var(--spacing-md) 0;
     padding: 0 var(--spacing-md);
   }
+
+  /* GLOBAL SCALE SECTION */
+  .global-section .card-container {
+    flex-wrap: wrap;
+    margin: var(--spacing-xl) 0;
+  }
+
+  .global-section .card-container .card {
+    width: 50%;
+    margin: var(--spacing-md) 0;
+  }
+
+  .global-section .two-column .col-left {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 /* MOBILE SIZE */
@@ -91,5 +107,15 @@
 
   .why-swipe-section .card-container .card .icon {
     height: 35px;
+  }
+
+  /* GLOBAL SCALE SECTION */
+  .global-section .card-container .card {
+    width: 100%;
+    margin: var(--spacing-sm) 0;
+  }
+
+  #globe {
+    opacity: 10%;
   }
 }
