--- a/queries.css
+++ b/queries.css
@@ -72,6 +72,11 @@
     width: 100%;
     margin: 0;
   }
+
+  .virtual-events-section .col-left {
+    height: 446px;
+    padding: 0 var(--spacing-md) 0 0;
+  }
 }
 
 /* MOBILE SIZE */
@@ -117,5 +122,28 @@
 
   #globe {
     opacity: 10%;
+  }
+
+  /* VIRTUAL EVENTS SECTION */
+  .virtual-events-section .swipe-sessions-card {
+    margin: var(--spacing-lg) 0;
+    width: 100%;
+  }
+
+  .virtual-events-section .swipe-sessions-card .secondary-text {
+    width: 100%;
+  }
+
+  .virtual-events-section .swipe-sessions-card .card-top {
+    height: 40%;
+  }
+
+  .virtual-events-section .col-left {
+    height: 446px;
+    padding: 0;
+  }
+
+  #sessions-logo {
+    width: 300px;
   }
 }
