--- a/queries.css
+++ b/queries.css
@@ -75,12 +75,30 @@
 
   .virtual-events-section .col-left {
     height: 446px;
-    padding: 0 var(--spacing-md) 0 0;
+    padding: 0 var(--spacing-lg) 0 0;
+  }
+
+  /* GETTING STARTED SECTION */
+  .getting-started-section .two-column {
+    align-items: center;
+  }
+
+  .getting-started-section .col-right {
+    flex-wrap: wrap;
+  }
+
+  .getting-started-section .col-right .card {
+    width: 100%;
+    margin: var(--spacing-md) 0;
+  }
+
+  .getting-started-section .col-left {
+    padding: 0 var(--spacing-lg) 0 0;
   }
 }
 
 /* MOBILE SIZE */
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 585px) {
   .two-column {
     flex-direction: column;
   }
@@ -145,5 +163,27 @@
 
   #sessions-logo {
     width: 300px;
+  }
+
+  /* FOOTER */
+  .footer .section-container {
+    flex-wrap: wrap;
+  }
+
+  .footer .col {
+    width: 50%;
+    margin: var(--spacing-md) 0;
+  }
+
+  .footer .col a {
+    font-size: 12px;
+  }
+
+  #footer-logo {
+    width: 70px;
+  }
+
+  .footer .icon-link img {
+    width: 18px;
   }
 }
