--- a/queries.css
+++ b/queries.css
@@ -27,6 +27,7 @@
     --h1-size: 64px;
     --h1-height: 72px;
     --h3-size: 34px;
+    --h6-size: 16px;
   }
 
   /* UNIFIED PLATFORM SECTION */
@@ -99,6 +100,13 @@
 
 /* MOBILE SIZE */
 @media only screen and (max-width: 585px) {
+  :root {
+    --h1-size: 58px;
+    --h1-height: 64px;
+    --h3-size: 34px;
+    --h6-size: 16px;
+  }
+
   .two-column {
     flex-direction: column;
   }
@@ -110,6 +118,24 @@
   .two-column .col-right {
     width: 100%;
     padding: 0;
+  }
+
+  /* NAVBAR */
+  .navbar {
+    margin: 0 0 var(--spacing-lg) 0;
+  }
+
+  /* HERO SECTION */
+  #gradient-canvas {
+    height: 820px;
+  }
+
+  main {
+    margin: var(--spacing-lg) 0;
+  }
+
+  .hero .hero-phone-container {
+    display: none;
   }
 
   /* PARTNERS SECTION */
