--- a/queries.css
+++ b/queries.css
@@ -2,10 +2,38 @@
   .section-container {
     padding: 0 var(--spacing-md);
   }
+
+  :root {
+    --h1-size: 80px;
+    --h1-height: 85px;
+  }
+
+  /* HERO SECTION */
+  .hero-phone {
+    height: 550px;
+    transform: translateY(-60px);
+  }
+
+  .hero .col-left {
+    width: 60%;
+  }
+  .hero .col-right {
+    width: 40%;
+  }
 }
 
 /* TABLET SIZE */
 @media only screen and (max-width: 850px) {
+  :root {
+    --h1-size: 70px;
+    --h1-height: 75px;
+  }
+
+  /* HERO SECTION */
+  .hero-phone {
+    transform: translateY(-85px);
+  }
+
   /* PARTNERS SECTION */
   .partners-grid img {
     width: 100%;
@@ -24,10 +52,41 @@
 
 @media only screen and (max-width: 768px) {
   :root {
-    --h1-size: 64px;
-    --h1-height: 72px;
+    --h1-size: 58px;
+    --h1-height: 65px;
     --h3-size: 34px;
     --h6-size: 16px;
+  }
+
+  /* NAVBAR */
+  .navbar {
+    margin: 0;
+  }
+
+  /* HERO SECTION  */
+  #gradient-canvas {
+    height: 820px;
+  }
+
+  main {
+    margin: 0;
+  }
+
+  .hero .two-column {
+    align-items: center;
+  }
+
+  .hero .col-left {
+    width: 60%;
+  }
+
+  .hero .col-right {
+    width: 40%;
+  }
+
+  .hero-phone {
+    height: 450px;
+    transform: translateX(32px);
   }
 
   /* UNIFIED PLATFORM SECTION */
