--- a/queries.css
+++ b/queries.css
@@ -59,6 +59,39 @@
   }
 
   /* NAVBAR */
+  nav.navbar {
+    margin: var(--spacing-sm) 0 var(--spacing-lg) 0;
+  }
+
+  .navbar .menu,
+  .navbar .navbar-button {
+    display: none;
+  }
+
+  .hamburger-button {
+    width: 50px;
+    height: 30px;
+    background-color: rgba(250, 250, 250, 0.25);
+    border-radius: 20px;
+    /* 'display:flex;' will undo the 'display:none;' in the style.css */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hamburger-button .bar {
+    width: 18px;
+    height: 2px;
+    background-color: var(--bg-white);
+    margin: 1px 0;
+  }
+
+  .hamburger-button:hover {
+    cursor: pointer;
+  }
+
+  /* ************ */
   .navbar {
     margin: 0;
   }
