--- a/queries.css
+++ b/queries.css
@@ -219,7 +219,7 @@
 
   /* HERO SECTION */
   #gradient-canvas {
-    height: 820px;
+    height: 830px;
   }
 
   main {
@@ -233,14 +233,33 @@
   /* PARTNERS SECTION */
   .partners-grid {
     grid-template-columns: 1fr 1fr;
+    margin: var(--spacing-lg) 0;
+  }
+
+  /* UNIFIED PLATFORMS SECTION */
+
+  .unified-platform-section {
+    padding: var(--spacing-lg) 0;
   }
 
   /* INTEGRATIONS SECTION */
+  .integrations-section {
+    padding: var(--spacing-lg) 0;
+  }
+
+  .integrations-section::before {
+    height: 950px;
+  }
+
   .integrations-section .col-right {
     display: none;
   }
 
   /* WHY SWIPE SECTION */
+  .why-swipe-section {
+    padding: var(--spacing-lg) 0;
+  }
+
   .why-swipe-section .card-container .card {
     width: 100%;
     margin: var(--spacing-sm) 0;
@@ -251,6 +270,14 @@
   }
 
   /* GLOBAL SCALE SECTION */
+  .global-section {
+    padding: var(--spacing-xl) 0 0 0;
+  }
+
+  .global-section .card-container {
+    margin: var(--spacing-lg) 0;
+  }
+
   .global-section .card-container .card {
     width: 100%;
     margin: var(--spacing-sm) 0;
@@ -261,6 +288,10 @@
   }
 
   /* VIRTUAL EVENTS SECTION */
+  .virtual-events-section {
+    padding: 0;
+  }
+
   .virtual-events-section .swipe-sessions-card {
     margin: var(--spacing-lg) 0;
     width: 100%;
@@ -283,7 +314,16 @@
     width: 300px;
   }
 
+  /* GETTING STARTED SECTION */
+  .getting-started-section {
+    padding: var(--spacing-lg) 0;
+  }
+
   /* FOOTER */
+  .footer {
+    padding: var(--spacing-lg) 0;
+    margin: 0;
+  }
   .footer .section-container {
     flex-wrap: wrap;
   }
