--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+/* VARIABLES */
+
 :root {
+  /* Text Styles */
   --body-font: "Roboto", sans-serif;
   --heading-font: "Anek Telugu", sans-serif;
   --h1-size: 94px;
@@ -202,7 +205,7 @@ p {
   width: 100%;
 }
 
-/* REUSABLE CLASSES */
+/* REUSABLE BUTTON AND TEXT CLASSES*/
 
 .subtitle,
 .subtitle2 {
@@ -315,7 +318,7 @@ p {
   display: none;
 }
 
-/* ANIMATED GRADIENT */
+/* ANIMATED GRADIENT IN HERO BACKGROUND*/
 
 #gradient-canvas {
   width: 200%;
@@ -332,12 +335,16 @@ p {
   --gradient-color-4: #ffba27;
 }
 
-/* HERO*/
+/* HERO SECTION*/
 
 .hero {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.hero p {
+  max-width: 480px;
 }
 
 .button-container {
@@ -350,10 +357,6 @@ p {
   color: var(--purple-2);
 }
 
-.hero p {
-  max-width: 480px;
-}
-
 .hero .hero-phone-container {
   height: 564px;
   align-items: flex-end;
@@ -364,7 +367,7 @@ p {
   transform: translate(32px, -32px);
 }
 
-/* PARTNERS SECTION */
+/* PARTNERS GRID SECTION */
 
 .partners-section {
   width: 100%;
@@ -746,6 +749,7 @@ p {
 }
 
 /* FOOTER SECTION */
+
 footer {
   width: 100%;
   margin: var(--spacing-xl) 0 0 0;
@@ -756,6 +760,11 @@ footer {
   justify-content: center;
   background-color: var(--bg-light);
   padding: var(--spacing-xl) 0;
+}
+
+.footer h3 {
+  font-size: var(--h6-size);
+  font-weight: 700;
 }
 
 .footer .section-container {
@@ -799,9 +808,4 @@ footer {
 #footer-logo {
   max-width: 108px;
   margin: 0 0 var(--spacing-md) 0;
-}
-
-.footer h3 {
-  font-size: var(--h6-size);
-  font-weight: 700;
 }
