--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
   --primary-button-hover: #6d7a88;
   /* Buttons */
   --button-size: 16px;
-  /* Swadows and Gradients */
+  /* Swadow, Gradient, and Border radius */
   --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
   --primary-gradient: linear-gradient(
     101.33deg,
@@ -40,6 +40,7 @@
     #36c5f0 76.92%,
     #83e2ff 96.96%
   );
+  --border-radius: 20px;
   /* Spacing */
   --spacing-sm: 8px;
   --spacing-md: 16px;
@@ -233,7 +234,7 @@ p {
   letter-spacing: 1.25px;
   font-weight: bold;
   border: none;
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   background-color: var(--primary-accent);
   color: var(--text-light);
   padding: var(--spacing-sm) var(--spacing-md);
@@ -251,7 +252,7 @@ p {
   letter-spacing: 1.25px;
   font-weight: bold;
   border: none;
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   background-color: transparent;
   color: var(--primary-accent);
   transition: all 0.15s ease;
@@ -424,10 +425,10 @@ p {
 
 #credit-card,
 #slack-invoice,
-#phone,
 #dash {
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--border-radius);
 }
 
 #credit-card {
@@ -440,6 +441,7 @@ p {
 
 #phone {
   grid-area: phone;
+  width: 100%;
 }
 
 #dash {
@@ -517,7 +519,7 @@ p {
 #api-code,
 #terminal-code {
   max-width: 470px;
-  border-radius: 20px;
+  border-radius: var(--border-radius);
 }
 
 #api-code {
@@ -646,7 +648,7 @@ p {
   width: 540px;
   height: 446px;
   box-shadow: var(--standard-box-shadow);
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   overflow: hidden;
 }
 
